bug fixes and reporting features for service enumeration

--- a/services.config
+++ b/services.config
@@ -1,8 +1,11 @@
 [CREDENTIALS]
 # NOTE: If you want to use a kerberos ticket, export KRB5CCNAME and leave the following blank
 Username=admin
-Password=asdf
+Password=
 Domain=
+# hashes in LM:NTLM format
+Hashes=aad3b435b51404eeaad3b435b51404ee:e5810f3c99ae2abb2232ed8458a61309
+#Hashes=e5810f3c99ae2abb2232ed8458a61309
 
 
 [SERVICES]
