--- a/services.config
+++ b/services.config
@@ -4,9 +4,7 @@ Username=admin
 Password=
 Domain=
 # hashes in LM:NTLM format
-Hashes=aad3b435b51404eeaad3b435b51404ee:e5810f3c99ae2abb2232ed8458a61309
-#Hashes=e5810f3c99ae2abb2232ed8458a61309
-
+Hashes=
 
 [SERVICES]
 # friendly name for CSV # string to look for in "sc query" output (case-insensitive)
