--- a/services.config
+++ b/services.config
@@ -8,6 +8,6 @@ Hashes=
 
 [SERVICES]
 # friendly name for CSV # string to look for in "sc query" output (case-insensitive)
-WMI                     =Windows Management Instrumentation
+WMI                     =WINDOWS MANAGEMENT INSTRUMENTATION
 Altiris                 =SYMANTEC MANAGEMENT AGENT
 Malwarebytes            =MALWAREBYTES
