small changes to services.config and service enumeration

--- a/services.config
+++ b/services.config
@@ -1,13 +1,17 @@
 [CREDENTIALS]
-# NOTE: If you want to use a kerberos ticket, export KRB5CCNAME and leave the following blank
+# NOTE: If you want to use a kerberos ticket, export KRB5CCNAME and leave password blank
 Username=admin
-Password=
-Domain=
+Password=Sup3rSecr3t
+Domain=evilcorp.local
 # hashes in LM:NTLM format
 Hashes=
 
 [SERVICES]
 # friendly name for CSV # string to look for in "sc query" output (case-insensitive)
 WMI                     =WINDOWS MANAGEMENT INSTRUMENTATION
+Symantec				=SYMANTEC ENDPOINT PROTECTION
 Altiris                 =SYMANTEC MANAGEMENT AGENT
+Cisco FireAMP			=CISCO AMP
+Cisco AnyConnect		=ANYCONNECT
+Snare					=SNARE
 Malwarebytes            =MALWAREBYTES
