small tweak to csv combination function

--- a/services.config
+++ b/services.config
@@ -15,3 +15,7 @@ Cisco FireAMP           =CISCO AMP
 Cisco AnyConnect        =ANYCONNECT
 Snare                   =SNARE
 Malwarebytes            =MALWAREBYTES
+Ivanti                  =LANDESK
+Sophos                  =SOPHOS
+Webroot                 =WRSVC
+Kaseya                  =KASEYA AGENT
