--- a/services.config
+++ b/services.config
@@ -1,14 +1,15 @@
 [CREDENTIALS]
 # NOTE: If you want to use a kerberos ticket, export KRB5CCNAME and leave password blank
 Username=admin
-Password=Sup3rSecr3t
-Domain=evilcorp.local
+Password=password
+Domain=
 # hashes in LM:NTLM format
 Hashes=
+ConsecutiveFailedLogonLimit=3
 
 [SERVICES]
 # friendly name for CSV # string to look for in "sc query" output (case-insensitive)
-WMI                     =WINDOWS MANAGEMENT INSTRUMENTATION
+WMIs                     =WINDOWS MANAGEMENT INSTRUMENTATION
 Symantec                =SYMANTEC ENDPOINT PROTECTION
 Altiris                 =SYMANTEC MANAGEMENT AGENT
 Cisco FireAMP           =CISCO AMP
@@ -18,4 +19,4 @@ Malwarebytes            =MALWAREBYTES
 Ivanti                  =LANDESK
 Sophos                  =SOPHOS
 Webroot                 =WRSVC
-Kaseya                  =KASEYA AGENT
+# Kaseya                  =KASEYA AGENT
