--- a/services.config
+++ b/services.config
@@ -9,7 +9,7 @@ ConsecutiveFailedLogonLimit=3
 
 [SERVICES]
 # friendly name for CSV # string to look for in "sc query" output (case-insensitive)
-WMIs                     =WINDOWS MANAGEMENT INSTRUMENTATION
+WMI                     =WINDOWS MANAGEMENT INSTRUMENTATION
 Symantec                =SYMANTEC ENDPOINT PROTECTION
 Altiris                 =SYMANTEC MANAGEMENT AGENT
 Cisco FireAMP           =CISCO AMP
@@ -19,4 +19,4 @@ Malwarebytes            =MALWAREBYTES
 Ivanti                  =LANDESK
 Sophos                  =SOPHOS
 Webroot                 =WRSVC
-# Kaseya                  =KASEYA AGENT
+Kaseya                  =KASEYA AGENT
