fixed bug in service enumeration, added comments to services.config

--- a/services.config
+++ b/services.config
@@ -1,10 +1,17 @@
+# make sure wmiexec.py is in your path
+# if you're in a virtualenv, you can do something like this:
+#  $ export PATH=/root/.local/share/virtualenvs/impacket-asdfasdf/bin:$PATH
+
+
 [CREDENTIALS]
 # NOTE: If you want to use a kerberos ticket, export KRB5CCNAME and leave password blank
 Username=admin
 Password=password
+# domain in example.local format
 Domain=
 # hashes in LM:NTLM format
 Hashes=
+# abort after this many *consecutive* failed logins
 ConsecutiveFailedLogonLimit=3
 
 [SERVICES]
