added windows defender to default services.config

--- a/services.config
+++ b/services.config
@@ -17,6 +17,7 @@ ConsecutiveFailedLogonLimit=3
 [SERVICES]
 # friendly name for CSV # string to look for in "sc query" output (case-insensitive)
 WMI                     =WINDOWS MANAGEMENT INSTRUMENTATION
+Defender                =WINDEFEND
 Symantec                =SYMANTEC ENDPOINT PROTECTION
 Altiris                 =SYMANTEC MANAGEMENT AGENT
 Cisco FireAMP           =CISCO AMP
