--- a/services.config
+++ b/services.config
@@ -28,3 +28,8 @@ Ivanti                  =LANDESK
 Sophos                  =SOPHOS
 Webroot                 =WRSVC
 Kaseya                  =KASEYA AGENT
+Carbon Black            =CBDEFENSE
+
+[EXECUTION]
+Timeout=20
+Method=wmiexec
