Fixed enum-services bugs, added two services

--- a/services.config
+++ b/services.config
@@ -18,7 +18,7 @@ ConsecutiveFailedLogonLimit=3
 # friendly name for CSV # string to look for in "sc query" output (case-insensitive)
 WMI                     =WINDOWS MANAGEMENT INSTRUMENTATION
 Defender                =WINDEFEND
-Symantec                =SYMANTEC ENDPOINT PROTECTION
+Symantec                =SEPMASTERSERVICE
 Altiris                 =SYMANTEC MANAGEMENT AGENT
 Cisco FireAMP           =CISCO AMP
 Cisco AnyConnect        =ANYCONNECT
@@ -29,6 +29,8 @@ Sophos                  =SOPHOS
 Webroot                 =WRSVC
 Kaseya                  =KASEYA AGENT
 Carbon Black            =CBDEFENSE
+Red Cloak               =DELL SECUREWORKS RED CLOAK
+Splunk                  =SPLUNKFORWARDER
 
 [EXECUTION]
 Timeout=20
