added two services

--- a/services.config
+++ b/services.config
@@ -31,6 +31,8 @@ Kaseya                  =KASEYA AGENT
 Carbon Black            =CBDEFENSE
 Red Cloak               =DELL SECUREWORKS RED CLOAK
 Splunk                  =SPLUNKFORWARDER
+BitDefender             =MANAGEDANTIVIRUS
+SolarWinds              =SOLARWINDS
 
 [EXECUTION]
 Timeout=20
