--- a/services.config
+++ b/services.config
@@ -33,6 +33,7 @@ Red Cloak               =DELL SECUREWORKS RED CLOAK
 Splunk                  =SPLUNKFORWARDER
 BitDefender             =MANAGEDANTIVIRUS
 SolarWinds              =SOLARWINDS
+CrowdStrike             =CSFALCONSERVICE
 
 [EXECUTION]
 Timeout=20
